# Sheila

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/include/: hpclient.h  hppeer.h
Client/src/: hpclient.cpp  hppeer.cpp  main.cpp
Common/include/: connection.h  message.h  netexception.h  networking.h  receiver.h  sender.h  tsqueue.h
Server/: CMakeLists.txt
Server/include/: hpserver.h  server.h
Server/src/: hpserver.cpp  main.cpp
