cmake_minimum_required(VERSION 3.8)

project(SheilaClientLib)

set(ASIO_DIRECTORY "../Dependencies/ASIO/asio/include")
set(PROJECT_SOURCES_DIR "./src")
set(PROJECT_INCLUDES_DIR "./include")
set(BASE_PROJECT_INCLUDES_DIR "../Common/include")

include_directories(
        ${PROJECT_INCLUDES_DIR}
        ${BASE_PROJECT_INCLUDES_DIR}
        ${ASIO_DIRECTORY}
)

file(GLOB PROJECT_SOURCES ${PROJECT_SOURCES_DIR}/*.cpp)
list(REMOVE_ITEM PROJECT_SOURCES "${PROJECT_SOURCES_DIR}/main.cpp")
add_library(SheilaClientLib STATIC ${PROJECT_SOURCES})

if(APPLE)
{
	set_target_properties(SheilaClientLib PROPERTIES
		FRAMEWORK TRUE
		FRAMEWORK_VERSION A
		MACOSX_FRAMEWORK_IDENTIFIER com.sheila.clientlib
		MACOSX_FRAMEWORK_BUNDLE_VERSION 1.0.1
		MACOSX_FRAMEWORK_SHORT_VERSION_STRING 1.0.1
		PUBLIC_HEADER "${PROJECT_INCLUDES_DIR}/hpclient.h"
		XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "Apple Development"
		XCODE_ATTRIBUTE_SKIP_INSTALL "NO"
		XCODE_ATTRIBUTE_INSTALL_PATH "@rpath"
	)
}
